Fixed modal dimensions on mobile

--- a/dictionary-app/css/style.css
+++ b/dictionary-app/css/style.css
@@ -17,10 +17,6 @@ h1 {
   border-bottom: 3px solid lightsteelblue;
 }
 
-.openModal:hover {
-  color: lightsteelblue;
-}
-
 h2 {
   color: cornflowerblue;
   margin-bottom: 20px;
@@ -30,6 +26,7 @@ h2 {
 
 img {
   margin-bottom: 20px;
+  cursor: pointer;
 }
 
 a {
@@ -172,8 +169,8 @@ button {
 
 #modal-textbox {
   background-color: lightsteelblue;
-  height: 60%;
-  width: 80%;
+  height: 230px;
+  width: 260px;
   border-radius: 2px;
   margin: 150px auto;
   box-shadow: 0 2px 2px rgba(0,0,0,0.2);
@@ -191,7 +188,7 @@ button {
 #close {
 position: relative;
 left: 5px;
-top: -50px;
+top: -30px;
 cursor: pointer;
 }
 
